--- a/index.html
+++ b/index.html
@@ -474,8 +474,15 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   }
 }
 
+/* Hybrid visibility: hidden on screen, visible at print time */
+#pdfReport { display:none; }
 #pdfReport.show-for-print { display:block !important; }
 #pdfReport.pdf-v2 .a4-bg { -webkit-print-color-adjust: exact; print-color-adjust: exact; }
+
+/* Tiny toast for status */
+#pdfStatusToast{position:fixed;right:12px;bottom:12px;background:#0b63ce;color:#fff;
+  padding:8px 10px;border-radius:8px;font:12px/1.2 system-ui,Segoe UI,Arial;z-index:99999;
+  box-shadow:0 4px 20px rgba(0,0,0,.18); display:none}
 </style>
 <script id="embeddedQuestions" type="application/json">[]</script>
 <style>
@@ -1193,116 +1200,62 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
   function hook(){
     var btn = document.querySelector('#congratsPdf, .pdf-btn, button#print, button#createPdf');
     if(!btn) return;
-    btn.addEventListener('click', function(){
-      var host = document.getElementById('pdfReport');
-      if(host){
-        host.className = 'pdf-v2 show-for-print';
-        host.style.display = 'block';
-      }
-      if (typeof fillMapped === 'function') fillMapped();
-      // Synchronous print for mobile gesture
-      window.print();
-    }, true);
+    
+btn.addEventListener('click', function(){
+  var host = document.getElementById('pdfReport');
+  var bg = document.querySelector('#pdfReport .a4-bg');
+  var toast = document.getElementById('pdfStatusToast');
+  if(toast){ toast.style.display='block'; toast.textContent='Preparing PDF…'; }
+
+  // Ensure container is visible
+  if(host){
+    host.className = 'pdf-v2 show-for-print';
+    host.style.display = 'block';
+  }
+
+  // Fill dynamic fields
+  try { fillMapped(); } catch(e){ console.error('fillMapped failed', e); }
+
+  // Preload background with cache-buster
+  var src = bg?.getAttribute('data-src') || bg?.getAttribute('src') || './Copy of BED SAR TABLE.png';
+  if(bg){ bg.setAttribute('data-src', src); }
+  var preload = new Image();
+  preload.onload = function(){
+    // swap in the loaded image
+    if(bg){ bg.src = src + (src.indexOf('?')>-1?'&':'?') + 'v=' + Date.now(); }
+    // Two rAFs to ensure layout/paint completes before print
+    requestAnimationFrame(function(){
+      requestAnimationFrame(function(){
+        setTimeout(function(){
+          if(toast){ toast.textContent='Opening system print…'; }
+          window.print();
+        }, 60);
+      });
+    });
+  };
+  preload.onerror = function(){
+    console.warn('Background failed to load, printing anyway.');
+    requestAnimationFrame(function(){ window.print(); });
+  };
+  preload.src = src + (src.indexOf('?')>-1?'&':'?') + 'v=' + Date.now();
+
+  // Afterprint: hide again
+  var hide = function(){
+    if(toast){ toast.style.display='none'; }
+    if(host){
+      host.classList.remove('show-for-print');
+      host.style.display = 'none';
+    }
+    window.removeEventListener('afterprint', hide);
+  };
+  window.addEventListener('afterprint', hide);
+}, true);
+
   }
   window.addEventListener('DOMContentLoaded', hook);
 })();
 </script>
 
-
-<script id="pdf-dev-tools">
-(function(){
-  function q(sel){ return document.querySelector(sel); }
-  function qa(sel){ return Array.from(document.querySelectorAll(sel)); }
-  function hasFlag(name){
-    return new URLSearchParams(location.search).get(name)==='1' || (location.hash||'').includes(name);
-  }
-
-  // Optional: force-enable disabled PDF buttons
-  if (hasFlag('pdfunlock')) {
-    window.addEventListener('DOMContentLoaded', function(){
-      qa('button, a, [role=button]').forEach(function(el){
-        var t = (el.textContent||'').toLowerCase();
-        if (t.includes('pdf')) {
-          try{ el.disabled = false; el.removeAttribute('disabled'); }catch(e){}
-        }
-      });
-    });
-  }
-
-  // Optional: floating test button to trigger printing without relying on app button
-  if (hasFlag('pdftest')) {
-    window.addEventListener('DOMContentLoaded', function(){
-      var b = document.createElement('button');
-      b.textContent = 'Quick PDF';
-      b.type = 'button';
-      b.style.cssText = 'position:fixed;right:12px;bottom:12px;padding:10px 14px;border:0;border-radius:999px;background:#ffcc00;color:#222;font-weight:700;box-shadow:0 4px 16px rgba(0,0,0,.15);z-index:99999;';
-      b.addEventListener('click', function(){
-        try{
-          var host = document.getElementById('pdfReport');
-          if(host){
-            host.className = 'pdf-v2 show-for-print';
-            host.style.display = 'block';
-          }
-          // Attempt to fill mapped fields
-          if (typeof fillMapped === 'function') fillMapped();
-          // Wait for background image load if needed
-          var img = document.querySelector('#pdfReport .a4-bg');
-          var doPrint = function(){ window.print(); };
-          if (img && !img.complete) img.addEventListener('load', doPrint, {once:true}); else doPrint();
-        }catch(e){ console.error('Quick PDF failed', e); }
-      });
-      document.body.appendChild(b);
-    });
-  }
-})();
-</script>
-
-
-<script id="pdf-preload-fix">
-window.addEventListener('DOMContentLoaded', function(){
-  var img = document.querySelector('#pdfReport .a4-bg');
-  if (img) {
-    if (!img.complete) {
-      var pre = new Image();
-      pre.src = img.getAttribute('src');
-      pre.onload = function(){ try{ img.src = pre.src; }catch(e){} };
-    }
-  }
-});
-</script>
-
-
-<script id="pdf-show-mode">
-(function(){
-  function hasFlag(name){
-    return new URLSearchParams(location.search).get(name)==='1' || (location.hash||'').includes(name);
-  }
-  if (!hasFlag('showpdf')) return;
-
-  window.addEventListener('DOMContentLoaded', function(){
-    try{
-      var host = document.getElementById('pdfReport');
-      if(host){
-        host.className = 'pdf-v2 show-for-print';
-        host.style.display = 'block';
-      }
-      if (typeof fillMapped === 'function') fillMapped();
-
-      // Floating helper to trigger print (and a hint to use browser menu if blocked)
-      var b = document.createElement('a');
-      b.textContent = 'Print PDF';
-      b.href = 'javascript:window.print()';
-      b.style.cssText = 'position:fixed;right:12px;bottom:12px;padding:10px 14px;border-radius:999px;background:#2563eb;color:#fff;font-weight:700;text-decoration:none;box-shadow:0 6px 18px rgba(0,0,0,.18);z-index:99999;';
-      document.body.appendChild(b);
-
-      var hint = document.createElement('div');
-      hint.textContent = 'If tapping does nothing, use Chrome menu ⋮ → Print.';
-      hint.style.cssText = 'position:fixed;left:12px;bottom:12px;padding:8px 10px;border-radius:8px;background:#eef2ff;color:#1e40af;font:12px/1.3 system-ui,Segoe UI,Arial;z-index:99999;';
-      document.body.appendChild(hint);
-    }catch(e){ console.error('showpdf mode error', e); }
-  });
-})();
-</script>
-
+<div id="pdfStatusToast">Preparing PDF…</div>
 </body>
 </html>
