--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   }
 }
 </style>
-<script id="embeddedQuestions" type="application/json">[]</script>
+
 <style>
 /* === FINAL fixes v68: Statements duplicate header removal + header alignment (print only) === */
 @media print {
@@ -730,4 +730,4 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
 </table>
 </div>
 </section>
-</html>
+</body></html>
