--- a/index.html
+++ b/index.html
@@ -865,10 +865,10 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
     if(!markerStyle){ markerStyle=document.createElement('style'); markerStyle.id='markerStyle'; document.head.appendChild(markerStyle);}
     markerStyle.textContent = '.gauge::after{left: calc(var(--marker) - 5px);}';
     let rec=''; 
-    if(totals.pct<50) rec='<span style="font-size:18px; font-weight:bold;">You are behind and need more support. Please contact your coach and ask your team members for guidance'; 
-else if(totals.pct<70) rec='<span style="font-size:18px; font-weight:bold;">Focus on self-development. Constant practice will make you better. Ask feedback from team members so you know you improve'; 
-else if(totals.pct<85) rec=<span style="font-size:18px; font-weight:bold;">'Great hospitality! Keep challenging yourself and help others by giving them honest and positive feedback'; 
-else rec='<span style="font-size:18px; font-weight:bold;">Excellent! Your understanding of BED is inspiring. Continue to lead others by example';
+    if(totals.pct<50) rec='You are behind and may need more support. Please contact your coach and ask your team members for guidance'; 
+else if(totals.pct<70) rec='Focus on self-development. Constant practice will make you better. Ask feedback from friends so you know you improve'; 
+else if(totals.pct<85) rec='Great hospitality! Keep challenging yourself and help others by giving them honest and positive feedback'; 
+else rec='Excellent! Your understanding of BED is an inspiration for others. Continue to lead others by example';
     document.getElementById('recText').textContent = rec;
     renderGroupResults();
     show('finish');
