--- a/peer/index.html
+++ b/peer/index.html
@@ -1,1 +1,16 @@
-
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>BED – Peer Reviewer</title>
+  <link rel="stylesheet" href="../shared/style.css" />
+  <script>
+    window.__MODE__ = "peer";
+  </script>
+  <script type="module" src="../shared/app.js"></script>
+</head>
+<body>
+  <noscript>Please enable JavaScript to use this app.</noscript>
+</body>
+</html>
