--- a/peer/index.html
+++ b/peer/index.html
@@ -1,13 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-mode="peer">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>BED – Peer Reviewer</title>
   <link rel="stylesheet" href="../shared/style.css" />
-  <script>
-    window.__MODE__ = "peer";
-  </script>
   <script type="module" src="../shared/app.js"></script>
 </head>
 <body>
