--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>BED HOSPITALITY 2.0</title>
+  
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1E90FF">
+  <link rel="icon" href="icon-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="icon-192.png"> <!-- iPhone/iPad homescreen -->
+
   <style>
     body{display:flex;min-height:100vh;align-items:center;justify-content:center;font-family:system-ui,Arial,sans-serif}
     .card{padding:24px;border:1px solid #ddd;border-radius:12px;text-align:center}
