--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>BED HOSPITALITY 2.0</h1>
-    <p>Choose a form</p>
-    <p>
-      <a class="primary" href="team/">Team Member Form</a>
-      <a href="peer/">Peer Review Form</a>
-    </p>
-  </div>
+ <div class="card">
+  <h1 style="font-weight:700; font-size:26px;">BED HOSPITALITY 2.0</h1>
+  <p style="margin-top:6px; font-size:16px; color:#444;">Self-assessment</p>
+  <p>
+    <a class="primary" href="team/" style="min-width:200px; display:inline-block; text-align:center;">
+      I am a team member
+    </a>
+    <a href="peer/" style="min-width:200px; display:inline-block; text-align:center; color:#434343;">
+      I am a peer reviewer
+    </a>
+  </p>
+</div>
+
 </body>
 </html>
