--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </a>
   </p>
 </div>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js').catch(console.error);
+}
+</script>
 
 </body>
 </html>
