--- a/index.html
+++ b/index.html
@@ -4,37 +4,64 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>BED HOSPITALITY 2.0</title>
-  
+
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1E90FF">
   <link rel="icon" href="icon-192.png" sizes="192x192">
-  <link rel="apple-touch-icon" href="icon-192.png"> <!-- iPhone/iPad homescreen -->
 
   <style>
-    body{display:flex;min-height:100vh;align-items:center;justify-content:center;font-family:system-ui,Arial,sans-serif}
-    .card{padding:24px;border:1px solid #ddd;border-radius:12px;text-align:center}
-    a{display:inline-block;margin:8px 6px;padding:10px 16px;border-radius:8px;text-decoration:none;border:1px solid #1E90FF}
-    a.primary{background:#1E90FF;color:#fff}
+    body {
+      display:flex;
+      min-height:100vh;
+      align-items:center;
+      justify-content:center;
+      font-family:system-ui,Arial,sans-serif;
+    }
+    .card {
+      padding:24px;
+      border:1px solid #ddd;
+      border-radius:12px;
+      text-align:center;
+    }
+    h1 {
+      font-size: 24px;
+      font-weight: 700;
+      margin-bottom: 6px;
+    }
+    h2.subheader {
+      font-size: 16px;
+      font-weight: 500;
+      margin-top: 0;
+      margin-bottom: 20px;
+      color: #444;
+    }
+    .btn {
+      display:inline-block;
+      margin:8px 6px;
+      padding:10px 16px;
+      border-radius:8px;
+      text-decoration:none;
+      border:1px solid #1E90FF;
+      min-width: 200px; /* ensures same width */
+    }
+    .btn.primary {
+      background:#1E90FF;
+      color:#fff;
+    }
+    .btn.secondary {
+      background:#fff;
+      color:#434343; /* dark grey */
+    }
   </style>
 </head>
 <body>
- <div class="card">
-  <h1 style="font-weight:700; font-size:26px;">BED HOSPITALITY 2.0</h1>
-  <p style="margin-top:6px; font-size:16px; color:#444;">Self-assessment</p>
-  <p>
-    <a class="primary" href="team/" style="min-width:200px; display:inline-block; text-align:center;">
-      I am a team member
-    </a>
-    <a href="peer/" style="min-width:200px; display:inline-block; text-align:center; color:#434343;">
-      I am a peer reviewer
-    </a>
-  </p>
-</div>
-<script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('sw.js').catch(console.error);
-}
-</script>
-
+  <div class="card">
+    <h1>BED HOSPITALITY 2.0</h1>
+    <h2 class="subheader">Self-assessment form</h2>
+    <p>
+      <a class="btn primary" href="team/">I am a team member</a>
+      <a class="btn secondary" href="peer/">I am a peer reviewer</a>
+    </p>
+  </div>
 </body>
 </html>
