--- a/index.html
+++ b/index.html
@@ -63,5 +63,57 @@
       <a class="btn secondary" href="peer/">I am a peer reviewer</a>
     </p>
   </div>
+  <!-- Install Overlay -->
+<div id="installOverlay" style="position:fixed; inset:0; background:#fff; display:flex; flex-direction:column; align-items:center; justify-content:center; z-index:9999; text-align:center; padding:20px;">
+  <h2 style="margin-bottom:12px;">Install BED Hospitality 2.0</h2>
+  <p style="max-width:320px; font-size:16px; color:#444; line-height:1.4;">
+    For the best experience, please install this app on your home screen before starting.
+  </p>
+  <button id="installBtn" style="margin-top:20px; padding:10px 18px; border:none; border-radius:6px; background:#1E90FF; color:#fff; font-size:16px; cursor:pointer;">
+    Install now
+  </button>
+  <button id="confirmInstalled" style="margin-top:10px; padding:10px 18px; border:1px solid #ccc; border-radius:6px; background:#f8f8f8; color:#333; font-size:16px; cursor:pointer;">
+    I already installed
+  </button>
+</div>
+
+<script>
+  const card = document.querySelector(".card");
+  const overlay = document.getElementById("installOverlay");
+  let deferredPrompt;
+
+  // Hide main content initially
+  card.style.display = "none";
+
+  // If already confirmed earlier, skip overlay
+  if (localStorage.getItem("appInstalled") === "true") {
+    overlay.style.display = "none";
+    card.style.display = "block";
+  }
+
+  // Capture browser's install prompt
+  window.addEventListener("beforeinstallprompt", (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+    document.getElementById("installBtn").onclick = async () => {
+      deferredPrompt.prompt();
+      const { outcome } = await deferredPrompt.userChoice;
+      if (outcome === "accepted") {
+        finishInstall();
+      }
+      deferredPrompt = null;
+    };
+  });
+
+  // Fallback confirm
+  document.getElementById("confirmInstalled").onclick = finishInstall;
+
+  function finishInstall() {
+    overlay.style.display = "none";
+    card.style.display = "block";
+    localStorage.setItem("appInstalled", "true");
+  }
+</script>
+
 </body>
 </html>
