--- a/team/index.html
+++ b/team/index.html
@@ -83,9 +83,8 @@
   </section>
 
   <div class="actions">
-    <button class="btn btn-primary" onclick="/* TODO: navigate to questions page */ alert('Continue to questions…')">
-      continue
-    </button>
+    <button class="btn btn-primary" onclick="location.href='questions-part1.html'">continue</button>
+
   </div>
 </main>
 </body>
