--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
 </head>
 <body>
   <!-- Hard gate: force install first -->
-  <script>
-  (function(){
-    const installed =
-      (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches) ||
-      window.navigator.standalone === true ||
-      localStorage.getItem('bed_installed') === '1';
-    if(!installed) location.replace('install.html');
-  })();
-  </script>
+ <script>
+(function(){
+  const installed =
+    (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches) ||
+    window.navigator.standalone === true;
+  if(!installed) location.replace('install.html');
+})();
+</script>
 
   <div class="wrap">
     <div class="h1">BED Hospitality 2.0</div>
