--- a/selection.html
+++ b/selection.html
@@ -28,15 +28,14 @@
   </style>
 </head>
 <body>
-  <script>
-  (function(){
-    const installed =
-      (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches) ||
-      window.navigator.standalone === true ||
-      localStorage.getItem('bed_installed') === '1';
-    if(!installed) location.replace('install.html');
-  })();
-  </script>
+ <script>
+(function(){
+  const installed =
+    (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches) ||
+    window.navigator.standalone === true;
+  if(!installed) location.replace('install.html');
+})();
+</script>
 
   <div class="wrap">
     <div class="h1">BED Hospitality 2.0</div>
